--- a/app/src/main/res/layout/fragment_abandon.xml
+++ b/app/src/main/res/layout/fragment_abandon.xml
@@ -7,58 +7,75 @@
     android:background="@color/background_green"
     tools:context=".presentation.game.view.AbandonFragment">
 
-    <TextView
-        android:id="@+id/Congratulations"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="29dp"
+        android:layout_height="match_parent">
 
-        android:layout_marginBottom="40dp"
-        android:text="@string/congratulations"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="48sp" />
+        <TextView
+            android:id="@+id/Congratulations"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/tvAbandonQuestion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="29dp"
-        android:text="@string/abandon_question"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="24sp" />
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/congratulations"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="48sp"
+            app:layout_constraintBottom_toTopOf="@+id/tvAbandonQuestion"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnConfirm"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/btn_shape_round"
-        android:backgroundTint="@color/background_white_green"
-        android:text="@string/yes"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:cornerRadius="15sp" />
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_shape_round"
+            android:backgroundTint="@color/background_white_green"
+            android:text="@string/no"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:cornerRadius="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />
 
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="320dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginBottom="96dp"
-        android:background="@drawable/btn_shape_round"
-        android:backgroundTint="@color/background_white_green"
-        android:text="@string/no"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:cornerRadius="15sp"/>
+        <TextView
+            android:id="@+id/tvAbandonQuestion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:text="@string/abandon_question"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Congratulations" />
+
+        <Button
+            android:id="@+id/btnConfirm"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_shape_round"
+            android:backgroundTint="@color/background_white_green"
+            android:text="@string/yes"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:cornerRadius="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvAbandonQuestion" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
