--- a/app/src/main/res/layout/fragment_consolidate.xml
+++ b/app/src/main/res/layout/fragment_consolidate.xml
@@ -16,8 +16,9 @@
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_marginLeft="70dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="70dp"
-            android:layout_marginBottom="29dp"
+            android:layout_marginBottom="30dp"
             android:text="@string/consolidate_question"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -31,11 +32,9 @@
 
         <ImageView
             android:id="@+id/ivAdvice"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="189dp"
-            android:layout_marginEnd="190dp"
-            android:layout_marginBottom="24dp"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
             android:backgroundTint="@color/background_green"
             android:contentDescription="@string/warning"
             android:src="@android:drawable/ic_menu_info_details"
@@ -43,6 +42,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvConsolidateQuestion"
             app:tint="@color/black"
             tools:ignore="ImageContrastCheck" />
 
@@ -50,9 +50,9 @@
             android:id="@+id/tvConsolidateExplanation"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="60dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/btn_shape_round"
             android:gravity="center"
             android:text="@string/consolidate_info"
@@ -60,6 +60,7 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivAdvice" />
@@ -68,9 +69,8 @@
             android:id="@+id/btnConfirm"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="70dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/btn_shape_round"
             android:backgroundTint="@color/background_white_green"
@@ -88,9 +88,8 @@
             android:id="@+id/btnCancel"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="70dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/btn_shape_round"
             android:backgroundTint="@color/background_white_green"
@@ -107,11 +106,10 @@
         <Button
             android:id="@+id/btnAbandon"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="70dp"
-            android:layout_marginBottom="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="40dp"
             android:background="@drawable/btn_shape_round"
             android:backgroundTint="@color/red"
             android:text="@string/abandon"
@@ -126,10 +124,7 @@
             android:id="@+id/tvRestantTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="53dp"
-            android:layout_marginTop="29dp"
-            android:layout_marginEnd="53dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginTop="50dp"
             android:text="@string/congratulations"
             android:textColor="@color/black"
             android:textSize="48sp"
