--- a/app/src/main/res/layout/fragment_title_challenges.xml
+++ b/app/src/main/res/layout/fragment_title_challenges.xml
@@ -13,12 +13,13 @@
 
         <TextView
             android:id="@+id/reto_Preguntas"
-            android:layout_width="75dp"
+            android:layout_width="wrap_content"
             android:layout_height="34dp"
             android:text="@string/question_challenge"
             android:textColor="@color/white"
             android:textSize="@dimen/header_font_size"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TextSizeCheck" />
     </androidx.constraintlayout.widget.ConstraintLayout>
