--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -29,10 +29,12 @@
         <ImageView
             android:id="@+id/ivProfile"
             android:layout_width="125dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="70dp"
+            android:layout_height="125dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="24dp"
             android:contentDescription="@string/profile"
             android:src="@drawable/empty_avatar"
+            app:layout_constraintBottom_toTopOf="@+id/btnEditImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
