--- a/app/src/main/res/layout/fragment_resumen.xml
+++ b/app/src/main/res/layout/fragment_resumen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_green"
-    tools:context=".presentation.game.view.ResumeFragment">
+    tools:context=".presentation.game.resume.ResumeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
