--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -122,8 +122,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="159dp"
-        android:layout_height="162dp"
+        android:layout_width="115dp"
+        android:layout_height="115dp"
         android:layout_marginTop="40dp"
         android:src="@drawable/empty_avatar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -202,5 +202,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
+
+    <Switch
+        android:id="@+id/swValidationType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contraseña muy segura"
+        app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPasswordError" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
